helmfile/kubernetes-dashboard/extras/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/secure-backends: "false"
#    nginx.ingress.kubernetes.io/auth-signin: https://oauth2-proxy.home.planetlauritsen.com/oauth2/start?rd=https://$host$request_uri
#    nginx.ingress.kubernetes.io/auth-url: https://oauth2-proxy.home.planetlauritsen.com/oauth2/auth
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes-dashboard.home.planetlauritsen.com
      http:
        paths:
          - backend:
              service:
                name: kubernetes-dashboard-kong-proxy
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - kubernetes-dashboard.home.planetlauritsen.com
      secretName: kubernetes-dashboard-tls
